[package]
name = "spectral_segment"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "spectral_segment"
path = "src/main.rs"

[lib]
name = "spectral_segment"
path = "src/lib.rs"

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"

[[bin]]
name = "gui"
path = "src/bin/gui.rs"

[dependencies]
image = "=0.24.9"
nalgebra = "=0.32.6"
clap = { version = "=4.4.18", features = ["derive"] }
anyhow = "=1.0.86"
timing = "0.2.3"
eframe = "0.28"
rfd   = "0.14"

